# policy-rag-chatbot

./: .env.example  .env.test  .flake8  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  generate_cruds.py  main.py  pyproject.toml  requirements.txt  tech_stack.md
frontend/: streamlit_app.py
migrations/: env.py
src/: __init__.py  app.py
src/ai_services/: agent_manager.py  chroma_store.py  config.py  embedding_factory.py  model_factory.py  prompts.py  rag_service.py  vector_store.py
src/config/: __init__.py  _database_config.py  _logger.py
src/configs/: __init__.py  _database.py  _env.py
src/controllers/: __init__.py  _file_controller.py
src/entities/: __init__.py
src/entities/audit_log/: __init__.py  _controller.py  _model.py  _repository.py  _schema.py  _service.py
src/entities/base/: __init__.py  _controller.py  _model.py  _repository.py  _schema.py  _service.py
src/entities/document/: __init__.py  _controller.py  _model.py  _repository.py  _schema.py  _service.py
src/entities/example/: __init__.py  _controller.py  _model.py  _repository.py  _service.py
src/entities/example2/: __init__.py  _controller.py  _model.py  _repository.py  _service.py
src/entities/test/: __init__.py  _controller.py  _model.py  _repository.py  _schema.py  _service.py
src/migrations/: env.py  script.py.mako
src/migrations/versions/: 0af612617347_init_template_with_auto_audit_logging.py  0cf842512e09_init_template.py  498ba5dcd715_create_database_table.py  50b230d2e2fc_init.py  aa1f75f1ce07_init_service.py  b799b904a867_initial_setup.py
src/models/: __init__.py  _file_queue.py
src/repositories/: __init__.py  _base_repository.py  _config.py  _queue_repository.py
src/services/: __init__.py  _file_service.py
src/tasks/: __init__.py  _file_queue_processor.py
src/utils/: __init__.py  _config.py  _file_parser.py  _file_queue_processor.py  _openai_client.py  _pinecone_client.py  _safe_sync.py  _user_ctx.py  document_parser.py  document_processing_service.py
test_services/: test_document_processing.py  test_gemini.py  test_rag_service.py
tests/: __init__.py
tests/controllers/: __init__.py  test_file_upload_endpoint.py
tests/utils/: __init__.py  test_openai_client.py  test_pinecone_client.py
uploads/: test.txt  text.md
